--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lsx-web",
+  "name": "@phobos-lsx/frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -29,8 +29,8 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.1.6",
-    "@angular/build": "^20.1.6",
+    "@angular-devkit/build-angular": "^20.1.3",
+    "@angular/build": "^20.1.3",
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.3",
     "@types/node": "^12.11.1",
