--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "20.1.3",
     "@angular/cli": "20.1.3",
+    "@angular/build": "^20.1.3",
     "@angular/compiler-cli": "20.1.3",
     "lerna": "^8.2.2"
   },
