--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "^20.1.3",
     "@angular/platform-browser-dynamic": "^20.1.3",
     "@angular/router": "^20.1.3",
+    "@phobos/elements": "^0.2.1",
+    "@phobos-lsx/protocol": "^0.1.0",
     "@softarc/native-federation-node": "^2.0.10",
-    "@types/uuid": "^8.3.4",
     "es-module-shims": "^1.5.12",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.4.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.3",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "cpx2": "^5.0.0",
     "ts-proto": "^1.117.0",
     "ts-protoc-gen": "^0.15.0",
