--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/phobos-elements"]
 	path = libs/phobos-elements
 	url = https://github.com/PRIM-EDV/phobos-elements
+[submodule "libs/protocol"]
+	path = libs/protocol
+	url = https://github.com/PRIM-EDV/lsx-protocol
