--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phobos-lsx/frontend",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,14 +11,14 @@
   "private": true,
   "dependencies": {
     "@angular-architects/native-federation": "^20.1.2",
-    "@angular/animations": "^20.1.3",
-    "@angular/common": "^20.1.3",
-    "@angular/compiler": "^20.1.3",
-    "@angular/core": "^20.1.3",
-    "@angular/forms": "^20.1.3",
-    "@angular/platform-browser": "^20.1.3",
-    "@angular/platform-browser-dynamic": "^20.1.3",
-    "@angular/router": "^20.1.3",
+    "@angular/animations": "20.1.3",
+    "@angular/common": "20.1.3",
+    "@angular/compiler": "20.1.3",
+    "@angular/core": "20.1.3",
+    "@angular/forms": "20.1.3",
+    "@angular/platform-browser": "20.1.3",
+    "@angular/platform-browser-dynamic": "20.1.3",
+    "@angular/router": "20.1.3",
     "@phobos/elements": "^0.2.1",
     "@phobos-lsx/protocol": "^0.1.0",
     "@softarc/native-federation-node": "^2.0.10",
@@ -30,15 +30,12 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.1.3",
-    "@angular/build": "^20.1.3",
-    "@angular/cli": "^20.1.3",
-    "@angular/compiler-cli": "^20.1.3",
+    "@angular-devkit/build-angular": "20.1.3",
+    "@angular/build": "20.1.3",
+    "@angular/cli": "20.1.3",
+    "@angular/compiler-cli": "20.1.3",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
-    "cpx2": "^5.0.0",
-    "ts-proto": "^1.117.0",
-    "ts-protoc-gen": "^0.15.0",
     "typescript": "~5.8.3"
   }
 }
