--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.1.3",
-    "@angular/cli": "20.1.3",
     "@angular/build": "20.1.3",
+    "@angular/cli": "20.1.3",
     "@angular/compiler-cli": "20.1.3",
-    "lerna": "^8.2.2"
-  },
-  "dependencies": {}
+    "lerna": "^8.2.2",
+    "vite": "^7.1.2"
+  }
 }
