--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/protocol"]
 	path = libs/protocol
 	url = https://github.com/PRIM-EDV/lsx-protocol
+[submodule "libs/core"]
+	path = libs/core
+	url = https://github.com/PRIM-EDV/phobos-core
