--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,41 +7,41 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "proto:generate": "cpx \"../protocol/*\" ./proto && protoc -I=./proto --ts_proto_opt=useOptionals=true --ts_proto_out=./proto ./proto/lsx.proto"
+    "start:prod": "node dist/main"
   },
   "dependencies": {
-    "@nestjs/common": "^10.3.8",
-    "@nestjs/core": "^10.3.8",
-    "@nestjs/event-emitter": "^2.0.4",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/platform-ws": "^10.3.8",
-    "@nestjs/serve-static": "^4.0.2",
-    "@nestjs/websockets": "^10.3.8",
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.3",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-ws": "^11.0.0",
+    "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/websockets": "^11.0.0",
     "@phobos-lsx/protocol": "^0.1.0",
+    "axios": "^1.9.0",
     "iterare": "^1.2.1",
+    "jose": "^6.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "play-sound": "^1.1.6",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^5.0.7",
-    "rxjs": "^7.8.1",
+    "rxjs": "7.8.2",
     "uuid": "^9.0.1",
     "websocket": "^1.0.35",
     "winston": "^3.13.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.2",
-    "@nestjs/devtools-integration": "^0.1.6",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^10.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
