--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,7 +25,7 @@
     "@softarc/native-federation-node": "^2.0.10",
     "es-module-shims": "^1.5.12",
     "jwt-decode": "^4.0.0",
-    "rxjs": "~7.4.0",
+    "rxjs": "7.8.2",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.15.1"
