--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
 
     environment:
       - MONGO_DB_HOST=db
-      - PHOBOS_AUTH_URL=${PHOBOS_AUTH_URL:-http://localhost:3000}
-      - PHOBOS_MAPTOOL_PORT=${PHOBOS_MAPTOOL_PORT:-3002}
+      - LSX_SERVER_HOSTNAME=${LSX_SERVER_HOSTNAME}
+      - LSX_SERVER_PORT=${LSX_SERVER_PORT:-3005}
