--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     restart: always
     container_name: "lsx_server"
     ports:
-      - "${PHOBOS_MAPTOOL_PORT:-3005}:4005"
+      - "${LSX_SERVER_PORT:-3005}:4005"
     # devices:
     #   - "/dev/snd:/dev/snd"
 
     environment:
-      - MONGO_DB_HOST=db
+      - PHOBOS_AUTH_URL=${PHOBOS_AUTH_URL}
       - LSX_SERVER_HOSTNAME=${LSX_SERVER_HOSTNAME}
       - LSX_SERVER_PORT=${LSX_SERVER_PORT:-3005}
