--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     #   - "/dev/snd:/dev/snd"
 
     environment:
+      - QLCPLUS_WS_URL=${QLCPLUS_WS_URL:-ws://localhost:9999/qlcplusWS}
       - PHOBOS_AUTH_URL=${PHOBOS_AUTH_URL}
       - LSX_SERVER_HOSTNAME=${LSX_SERVER_HOSTNAME}
       - LSX_SERVER_PORT=${LSX_SERVER_PORT:-3005}
